deploy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: fion-login
    app.kubernetes.io/name: fion-login
  name: fion-login
  namespace: prod
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: fion-login
    app.kubernetes.io/name: fion-login
  sessionAffinity: None
  type: ClusterIP
